--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,8 @@
     <div>
         <a href="/journal/">日誌列表</a>
         <a href="/journal/create/">寫日誌</a>
+        <a href="{% url 'expense_list' %}">支出列表</a>
+        <a href="{% url 'expense_create' %}">新增消費</a>
         {% if user.is_authenticated %}
           {{ user.username }} <a href="{% url 'logout' %}">登出</a>
         {% else %}
