--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,21 +2,15 @@
 
 {% block content %}
 {% if form.errors %}
-<p>帳號或密碼不符合，請再試一次。</p>
+<p class="alert alert-danger">帳號或密碼不符合，請再試一次。</p>
 {% endif %}
-
-<form action="" method="post">
+<form method="post" action="{% url 'login' %}">
   {% csrf_token %}
-  <div>
-    <td>帳號：</td>
-    <td>{{ form.username }}</td>
-  </div>
-  <div>
-    <td>密碼：</td>
-    <td>{{ form.password }}</td>
-  </div>
-  <div>
-    <input type="submit" value="登入" />
+  <div class="h3 mb5">請輸入您的帳號密碼</div>
+  <div class="form-inline">
+    <input name="username" autofocus="" required="" id="id_username" maxlength="254" type="text" class="form-control mr-2" placeholder="帳號">
+    <input name="password" required="" id="id_password" type="password" class="form-control mr-2" placeholder="密碼">
+    <input type="submit" value="login" class="form-control btn-primary"/>
   </div>
 </form>
 {% endblock %}
